# AlgoRhythm

./: .gitignore  PLAN.md  README.md
AlgoRhythm/: AlgoRhythm.cabal  LICENSE  README.md  hackage-docs.sh
AlgoRhythm/app/: Main.hs
AlgoRhythm/src/: Dynamics.hs  Generate.hs
AlgoRhythm/src/Export/: MIDI.hs  MIDIConfig.hs  Score.hs
AlgoRhythm/src/Generate/: Chaos.hs  Generate.hs
AlgoRhythm/src/Generate/Applications/: ChaosPitches.hs  Diatonic.hs  GenConfig.hs
AlgoRhythm/src/Grammar/: Harmony.hs  Integration.hs  Melody.hs  Tabla.hs  TonalHarmony.hs  Types.hs  UUHarmony.hs
AlgoRhythm/src/Music/: Constants.hs  Operators.hs  Transformations.hs  Types.hs
AlgoRhythm/src/Utils/: Peano.hs  Vec.hs
AlgoRhythm/test/: GenSetup.hs  Spec.hs  TChaos.hs  TGenerate.hs  TGrammar.hs  TMidi.hs  TMusic.hs  TScore.hs
euterpea-test/: .gitignore  README.md  stack.yaml
euterpea-test/app/: Main.hs
euterpea-test/src/: Lib.hs  SelfSimilar.hs
music/: music.cabal  stack.yaml
music/app/: Main.hs
music/src/: Dynamics.hs  Export.hs  Generate.hs  Grammar.hs  MIDI.hs  Music.hs  Peano.hs  Score.hs  Vec.hs
music/src/Export/: MIDI.hs  MIDIConfig.hs  Score.hs
music/src/Generate/: Chaos.hs  Generate.hs  QuickCheck.hs
music/src/Generate/Applications/: Diatonic.hs
music/src/Grammar/: Dynamics.hs  Examples.hs  Grammar.hs  Harmony.hs  Harmony2.hs  Integration.hs  Melody.hs  RandomUtils.hs  Tabla.hs  TonalHarmony.hs  Types.hs  UUHarmony.hs  Utilities.hs  VoiceLeading.hs
music/src/Music/: Chaos.hs  Constants.hs  Generate.hs  Operators.hs  Transformations.hs  Types.hs  Utilities.hs  Vec.hs
music/src/Music/Generate/: Chaos.hs  QuickCheck.hs
music/src/Utils/: Peano.hs
music/test/: GenSetup.hs  Setup.hs  Spec.hs  TGenerate.hs  TGrammar.hs  TMidi.hs  TMusic.hs  TScore.hs  TVec.hs
output/Chaos/: 1. blues.m4a  3. blues dynamic.m4a  monotonous blues.m4a
output/MIDI/A-HarmonicMinor/Allegro/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-HarmonicMinor/Andante/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-HarmonicMinor/Moderato/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Japanese/Allegro/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Japanese/Andante/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Japanese/Moderato/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Major/Allegro/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Major/Andante/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Major/Moderato/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Minor/Allegro/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Minor/Andante/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Minor/Moderato/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  3-melody.mid  4-harmony.mid  4-melody.mid  5-harmony.mid  5-melody.mid  6-harmony.mid  6-melody.mid  7-harmony.mid  7-melody.mid  8-harmony.mid  8-melody.mid  9-harmony.mid  9-melody.mid
output/MIDI/A-Romanian/Allegro/: 1-harmony.mid  1-melody.mid  10-harmony.mid  10-melody.mid  2-harmony.mid  2-melody.mid  3-harmony.mid  (+13 more)
presentation/: presentation.tex  presentation.vrb
proposal/: proposal.tex  sources.bib
report/: report.tex  sources.bib
status-report/: status-report.tex
(+3340 files in other folders)
