name: AlgoRhythm
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple

library
    exposed-modules:
        -- Music
        Music,
        Music.Types,
        Music.Constants,
        Music.Transformations,
        Music.Operators,
        Music.Utilities,
        -- Export
        Export,
        Export.MIDI,
        Export.MIDIConfig,
        Export.Score,
        -- Generation
        Generate,
        Generate.Generate,
        Generate.Chaos,
        Generate.QuickCheck,
        Generate.Applications.Diatonic,
        Generate.Applications.GenConfig,
        -- Grammars
        Grammar,
        Grammar.Types,
        Grammar.Utilities,
        Grammar.Harmony,
        Grammar.UUHarmony,
        Grammar.TonalHarmony,
        Grammar.VoiceLeading,
        Grammar.Melody,
        Grammar.Integration,
        Grammar.Tabla,
        -- Utilities
        Utils.Vec,
        Utils.Peano,
        -- Dynamics
        Dynamics
    build-depends:
        base >=4.7 && <5,
        midi == 0.2.*,
        template-haskell == 2.11.1.*,
        Euterpea == 2.0.*,
        HCodecs == 0.5.*,
        lilypond == 1.9.*,
        data-default == 0.7.*,
        prettify,
        text,
        QuickCheck,
        mtl,
        derive,
        containers,
        transformers,
        random,
        kmeans
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

executable music-exe
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5,
        AlgoRhythm
    default-language: Haskell2010
    hs-source-dirs: app
    -- ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite music-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules: GenSetup, TMusic, TScore, TMidi, TVec, TGrammar, TGenerate
    build-depends:
        base >=4.7 && <5,
        AlgoRhythm,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2,
        HUnit,
        QuickCheck,
        derive,
        directory,
        lilypond,
        bytestring,
        HCodecs,
        Euterpea,
        random
    default-language: Haskell2010
    hs-source-dirs: test
    -- ghc-options: -threaded -rtsopts -with-rtsopts=-N
