name: AlgoRhythm
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: Orestis Melkonian <melkon.or@gmail.com>
stability: experimental
homepage: http://github.com/omelkonian/AlgoRhythm/
bug-reports: http://github.com/omelkonian/AlgoRhythm/issues
synopsis: Algorithmic music composition
description:
    A library consisting of several mini-DSLs for representing, manipulating and
    automatically generating music.
category: Algorithmic Music Composition,
          Automatic Music Generation,
          Generative Music Grammars,
          Chaos Music
author: Orestis Melkonian, Joris ten Tusscher, Cas van der Rest
extra-source-files:
    README.md
    LICENSE

source-repository head
    type: git
    location: git://github.com/omelkonian/AlgoRhythm.git

library
    exposed-modules:
        Music
        Music.Types
        Music.Constants
        Music.Transformations
        Music.Operators
        Music.Utilities
        Export
        Export.MIDI
        Export.MIDIConfig
        Export.Score
        Generate
        Generate.Generate
        Generate.Chaos
        Generate.QuickCheck
        Generate.Applications.Diatonic
        Generate.Applications.GenConfig
        Generate.Applications.ChaosPitches
        Grammar
        Grammar.Types
        Grammar.Utilities
        Grammar.Harmony
        Grammar.UUHarmony
        Grammar.TonalHarmony
        Grammar.VoiceLeading
        Grammar.Melody
        Grammar.Integration
        Grammar.Tabla
        Utils.Vec
        Utils.Peano
        Dynamics
    build-depends:
        base >=4.7 && <5,
        midi ==0.2.*,
        template-haskell ==2.11.1.*,
        Euterpea ==2.0.*,
        HCodecs ==0.5.*,
        lilypond ==1.9.*,
        data-default ==0.7.*,
        prettify -any,
        text -any,
        QuickCheck -any,
        mtl -any,
        derive -any,
        containers -any,
        transformers -any,
        random -any,
        kmeans -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

executable music-exe
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5,
        AlgoRhythm -any
    default-language: Haskell2010
    hs-source-dirs: app

test-suite music-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.7 && <5,
        AlgoRhythm -any,
        test-framework -any,
        test-framework-hunit -any,
        test-framework-quickcheck2 -any,
        HUnit -any,
        QuickCheck -any,
        derive -any,
        directory -any,
        lilypond -any,
        bytestring -any,
        HCodecs -any,
        Euterpea -any,
        random -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        GenSetup
        TMusic
        TScore
        TMidi
        TVec
        TGrammar
        TGenerate
        TChaos
