name: music
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple

library
    exposed-modules:
        Music,
        Music.Types,
        Music.Constants,
        Music.Transformations,
        Music.Operators,
        Music.Utilities,
        Vec,
        Peano,
        Generate,
        Generate.Generate,
        Generate.Chaos,
        Generate.QuickCheck,
        Export,
        Export.MIDI,
        Export.Score
    build-depends:
        base >=4.7 && <5,
        midi == 0.2.*,
        template-haskell == 2.11.1.*,
        Euterpea == 2.0.*,
        HCodecs == 0.5.*,
        lilypond == 1.9.*,
        data-default == 0.7.*,
        prettify,
        text,
        QuickCheck,
        mtl,
        derive,
        containers
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

executable music-exe
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5,
        music
    default-language: Haskell2010
    hs-source-dirs: app
    -- ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite music-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules: GenSetup, TMusic, TScore, TMidi, TVec
    build-depends:
        base >=4.7 && <5,
        music,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2,
        HUnit,
        QuickCheck,
        derive,
        directory
    default-language: Haskell2010
    hs-source-dirs: test
    -- ghc-options: -threaded -rtsopts -with-rtsopts=-N
